# multi-agent-rlenv

./: .gitignore  LICENSE  README.md  pyproject.toml  readme.md
.github/workflows/: ci.yaml  docs.yaml  python-test.yaml  release.yaml  test.yaml
src/: main.py
src/marlenv/: __init__.py  env_builder.py  env_pool.py  exceptions.py  mock_env.py
src/marlenv/adapters/: __init__.py  gym_adapter.py  overcooked_adapter.py  pettingzoo_adapter.py  pymarl_adapter.py  smac_adapter.py  smacv2_adapter.py
src/marlenv/catalog/: __init__.py  coordinated_grid.py  deepsea.py  env_pool.py  m_steps_matrix.py  matrix_game.py  mock_env.py  two_steps.py
src/marlenv/catalog/connectn/: __init__.py  board.py  connectn.py  env.py
src/marlenv/models/: __init__.py  env.py  episode.py  observation.py  rl_env.py  spaces.py  state.py  step.py  transition.py
src/marlenv/utils/: __init__.py  cached_property_collector.py  env_pool.py  env_schedule.py  import_placeholders.py  schedule.py
src/marlenv/wrappers/: __init__.py  action_randomizer.py  agent_id_wrapper.py  available_actions_mask.py  available_actions_wrapper.py  blind_wrapper.py  centralised.py  delayed_rewards.py  env_pool.py  env_schedule.py  last_action_wrapper.py  noise.py  paddings.py  penalty_wrapper.py  potential_shaping.py  rlenv_wrapper.py  state_counter.py  time_limit.py  video_recorder.py
src/rlenv/: __init__.py  config.py  env_builder.py  env_factory.py  mock_env.py  registry.py
src/rlenv/adapters/: __init__.py  gym_adapter.py  pettingzoo_adapter.py  pymarl_adapter.py  smac_adapter.py
src/rlenv/models/: __init__.py  episode.py  metrics.py  multi_objective_env.py  observation.py  rl_env.py  spaces.py  transition.py
src/rlenv/wrappers/: __init__.py  agent_id_wrapper.py  available_actions_mask.py  available_actions_wrapper.py  blind_wrapper.py  centralised.py  extrinsic_reward_wrapper.py  force_action.py  gym_wrapper.py  intrinsic_reward_wrapper.py  last_action_wrapper.py  log_wrapper.py  paddings.py  penalty_wrapper.py  pettingzoo_wrapper.py  rlenv_wrapper.py  smac_wrapper.py  time_limit.py  utils.py  video_recorder.py
tests/: mock_env.py  test_adapters.py  test_catalog.py  test_deepsea.py  test_episode.py  test_mock_env.py  test_models.py  test_others.py  test_pool.py  test_save_restore.py  test_schedules.py  test_serialization.py  test_spaces.py  test_wrappers.py  utils.py
